# CC3501-Security-System-Assignment

./: Group 5.brd  Group 5.sch  INSTALLATION README.txt  README.md  README.txt
SecuritySystem/: .gitignore  CMakeLists.txt
SecuritySystem/src/: Makefile  a.out  app.py  app.py~  camera.cpp  camera.h  camera.py  camera.py~  commands.dic  commands.lm  common.h  email.txt  emailSystem.py  emailWeb.py  main.cpp
SecuritySystem/src/static/css/: bootstrap.css
SecuritySystem/src/templates/: emailSetup.html  index.html  viewSnapShots.html
Source_Files/WebApp/: index.html  navBar.html  viewSnapShots.html
Source_Files/WebStuDev/: app.py  test.py  testing.py
Source_Files/WebStuDev/Templates/: index.html
Source_Files/WebStuDev/TemplatesOld/: index.html
