cmake_minimum_required(VERSION 2.8)
project(PiCapture)
SET(COMPILE_DEFINITIONS -O2 -Wall)
find_package( OpenCV REQUIRED )
include_directories(/opt/vc/include)
include_directories(/opt/vc/include/interface/vcos/pthreads)
include_directories(/opt/vc/include/interface/vmcs_host)
include_directories(/opt/vc/include/interface/vmcs_host/linux)
include_directories(USERLAND_DIR)
include_directories("${PROJECT_SOURCE_DIR}/include")
link_directories(/opt/vc/lib)
link_directories(/opt/vc/src/hello_pi/libs/vgfont)
link_directories(/usr/local/lib)
include_directories(/home/pi/sphinxbase/sphinxbase-5prealpha/include/sphinxbase)
include_directories(/home/pi/sphinxbase/sphinxbase-5prealpha/include)
include_directories(/home/pi/pocketsphinx/pocketsphinx-5prealpha/include)
add_executable(main src/camera.cpp src/cameracontrol.cpp src/main.cpp)
target_link_libraries(main /usr/local/lib/libpocketsphinx.so.3 /usr/local/lib/libsphinxad.so.3 /usr/local/lib/libsphinxbase.so.3 mmal_core mmal_util mmal_vc_client bcm_host vcos ${OpenCV_LIBS})